--- a/Project2/HTML/yamaha.html
+++ b/Project2/HTML/yamaha.html
@@ -24,7 +24,7 @@
 						</ul>
 					</div>
 				</div>
-				<div id="banner"><img src="../IMG/banner.jpg"></div>
+				<div id="banner"><img src="../IMG/banner.jpg" alt="banner" title="yamaha"></div>
 			</div>
 			<div id="content">
 				<div id="xega">
@@ -32,39 +32,65 @@
 					<div class="row">
 						<ul>
 							<li class="sp">
-								<a href="#"><img src="../IMG/acruzo.png"></a>
-								<a href="#"><p>ACRUZO 2017</p></a>
+								<a href="#"><img src="../IMG/nouvo-fi-rc.jpg" alt="nouvo-fi-rc" title="NOUVO-FI-RC"></a>
+								<a href="#"><p>NOUVO-FI-RC</p></a>
 							</li>
-							<li class="sp"></li>
-							<li class="sp"></li>
-							<li class="sp"></li>
+							<li class="sp">
+								<a href="#"><img src="../IMG/deluxe.png" alt="deluxe" title="DELUXE 2017"></a>
+								<a href="#"><p>DELUXE 2017</p></a>
+							</li>
+							<li class="sp">
+								<a href="#"><img src="../IMG/granderpremium.jpg" alt="granderpremium" title="GRANDER PREMIUM"></a>
+								<a href="#"><p>GRANDER PREMIUM</p></a>
+							</li>
+							<li class="sp">
+								<a href="#"><img src="../IMG/janus.png"alt="janus" title="JANUS"></a>
+								<a href="#"><p>JANUS</p></a></li>
 						</ul>
 					</div>
 					<div class="row">
-						<ul>
-							<li class="sp"></li>
-							<li class="sp"></li>
-							<li class="sp"></li>
-							<li class="sp"></li>
-						</ul>
+					
 					</div>
 				</div>
 				<div id="xeso">
 					<h1>XE SỐ YAMAHA</h1>
 					<div class="row">
 						<ul>
-							<li class="sp"></li>
-							<li class="sp"></li>
-							<li class="sp"></li>
-							<li class="sp"></li>
+							<li class="sp">
+								<a href="#"><img src="../IMG/exciter150gp.jpg" alt="exciter150gp" title="EXCITER-150 GP"></a>
+								<a href="#"><p>EXCITER-150 GP</p></a>
+							</li>
+							<li class="sp">
+								<a href="#"><img src="../IMG/movitar150.jpg" alt="movitar150" title="MOVISTAR-150"></a>
+								<a href="#"><p>MOVISTAR-150</p></a>
+							</li>
+							<li class="sp">
+								<a href="#"><img src="../IMG/matteblack.jpg" alt="matteblack" title="MATTE BLACK"></a>
+								<a href="#"><p>MATTE BLACK</p></a>
+							</li>
+							<li class="sp">
+								<a href="#"><img src="../IMG/exciterR.jpg" alt="exciterR" title="EXCITER R"></a>
+								<a href="#"><p>EXCITER R</p></a></li>
 						</ul>
 					</div>
 					<div class="row">
 						<ul>
-							<li class="sp"></li>
-							<li class="sp"></li>
-							<li class="sp"></li>
-							<li class="sp"></li>
+							<li class="sp">
+								<a href="#"><img src="../IMG/NVX155Standard.png" alt="NVX155Standard" title="NVX-155 Standard"></a>
+								<a href="#"><p>NVX-155 Standard</p></a>
+							</li>
+							<li class="sp">
+								<a href="#"><img src="../IMG/TFX150.png" alt="TFX150" title="TFX-150"></a>
+								<a href="#"><p>TFX-150</p></a>
+							</li>
+							<li class="sp">
+								<a href="#"><img src="../IMG/YZF-R3.jpg" alt="YZF-R3" title="YZF-R3"></a>
+								<a href="#"><p>YZF-R3</p></a>
+							</li>
+							<li class="sp">
+								<a href="#"><img src="../IMG/movitar150.jpg" alt="movitar150" title="MOVISTAR-150"></a>
+								<a href="#"><p>MOVISTAR-150</p></a>
+							</li>
 						</ul>
 					</div>
 				</div>
