--- a/Project3/HTML/travel.html
+++ b/Project3/HTML/travel.html
@@ -135,45 +135,45 @@
 			<div class="local hcm">
 				<h1>DU LỊCH TP.HỒ CHÍ MINH</h1>
 				<ul class="row">
-					<li class="item"><a href=""><img src="../IMG/hn1.jpg"></a></li>
-					<li class="item"><a href=""><img src="../IMG/hn2.png"></a></li>
+					<li class="item"><a href=""><img src="../IMG/hcm1.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/hcm2.jpg"></a></li>
 				</ul>
 				<ul class="row">
-					<li class="item"><a href=""><img src="../IMG/hn3.jpg"></a></li>
-					<li class="item"><a href=""><img src="../IMG/hn3.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/hcm3.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/hcm4.jpg"></a></li>
 				</ul>
 			</div>
 			<div class="local hue">
 				<h1>DU LỊCH HUẾ</h1>
 				<ul class="row">
-					<li class="item"><a href=""><img src="../IMG/hn1.jpg"></a></li>
-					<li class="item"><a href=""><img src="../IMG/hn2.png"></a></li>
+					<li class="item"><a href=""><img src="../IMG/hue1.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/hue2.jpg"></a></li>
 				</ul>
 				<ul class="row">
-					<li class="item"><a href=""><img src="../IMG/hn3.jpg"></a></li>
-					<li class="item"><a href=""><img src="../IMG/hn3.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/hue3.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/hue4.jpg"></a></li>
 				</ul>
 			</div>
 			<div class="local danang">
 				<h1>DU LỊCH ĐÀ NẴNG</h1>
 				<ul class="row">
-					<li class="item"><a href=""><img src="../IMG/hn1.jpg"></a></li>
-					<li class="item"><a href=""><img src="../IMG/hn2.png"></a></li>
+					<li class="item"><a href=""><img src="../IMG/dn1.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/dn2.jpg"></a></li>
 				</ul>
 				<ul class="row">
-					<li class="item"><a href=""><img src="../IMG/hn3.jpg"></a></li>
-					<li class="item"><a href=""><img src="../IMG/hn3.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/dn3.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/dn4.jpg"></a></li>
 				</ul>
 			</div>
 			<div class="local dalat">
 				<h1>DU LỊCH ĐÀ LẠT</h1>
 				<ul class="row">
-					<li class="item"><a href=""><img src="../IMG/hn1.jpg"></a></li>
-					<li class="item"><a href=""><img src="../IMG/hn2.png"></a></li>
+					<li class="item"><a href=""><img src="../IMG/dl1.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/dl2.jpg"></a></li>
 				</ul>
 				<ul class="row">
-					<li class="item"><a href=""><img src="../IMG/hn3.jpg"></a></li>
-					<li class="item"><a href=""><img src="../IMG/hn3.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/dl3.jpg"></a></li>
+					<li class="item"><a href=""><img src="../IMG/dl4.jpg"></a></li>
 				</ul>
 			</div>
 		</div>
