--- a/Project5/HTML/card.html
+++ b/Project5/HTML/card.html
@@ -6,6 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="../CSS/card.css">
 </head>
 <body>
-<div class="content"></div>
+	<div class="wrapper">
+		<div class="frame"></div>
+		<div class="frame"><img src="../IMG/frame1.png"></div>
+		<div class="content"></div>
+		
+	</div>
 </body>
 </html>
