--- a/Project6/HMTL/page2-3.html
+++ b/Project6/HMTL/page2-3.html
@@ -72,7 +72,7 @@
 
 			<div id="content-right">
 				<div id="ad">
-					<img src="../IMG/ad5.jpg">
+					<img id="bg" src="../IMG/ad5.jpg">
 					<h2 id="slogan">			
 						<span class="word">THƯƠNG</span>
 						<span class="word">HIỆU</span>
@@ -82,6 +82,8 @@
 						<span class="word">NAM</span>
 						<span class="word">ĐỊNH</span>
 					</h2>
+					<img id="icon-rotate1" src="../IMG/iconxoay1.png">
+					<img id="icon-rotate2"src="../IMG/icontrong4.png">
 				</div>			
 				<div class="section">
 					<div class="tieude first">
