--- a/Project6/HMTL/ipho.html
+++ b/Project6/HMTL/ipho.html
@@ -26,7 +26,7 @@
 							<li><a href="page2-3.html">TÁI NẠM</a></li>
 							<li><a href="page2-4.html">PHỞ XÀO</a></li>
 							<li><a href="page2-5.html">MỲ XÀO</a></li>
-							<li class="last"><a href="#">PHỞ CUỐN BÒ</a></li>
+							<li class="last"><a href="page2-6.html">PHỞ CUỐN BÒ</a></li>
 						</ul>
 					</li>
 					<li><a href="page5.html">CƠM RANG</a>
@@ -93,30 +93,32 @@
 					<ul class="row">
 						<li class="item">
 							<a href="page2-1.html"><img src="../IMG/Pho-Viet.jpg" title="Tái chín"></a>
-							<h2>TÁI CHÍN</h2>
+							<h2>TÁI CHÍN</br>Giá: 40.000đ</h2>
+							
 						</li>
 						<li class="item">
 							<a href="page2-2.html"><img src="../IMG/pho-viet2.png" title="Tái gầu"></a>
-							<h2>TÁI GẦU</h2>
+							<h2>TÁI GẦU</br>Giá: 40.000đ</h2>
+
 						</li>
 						<li class="item">
 							<a href="page2-3.html"><img src="../IMG/Pho-Viet4.jpg" title="Tái nạm"></a>
-							<h2>TÁI NẠM</h2>
+							<h2>TÁI NẠM</br>Giá: 40.000đ</h2>
 						</li>
 						<div class="clear"></div>
 					</ul>
 					<ul class="row">
 						<li class="item">
 							<a href="page2-4.html"><img src="../IMG/phoxao.jpg" title="Phở xào"></a>
-							<h2>PHỞ XÀO</h2>
+							<h2>PHỞ XÀO</br>Giá: 35.000đ</h2>
 						</li>
 						<li class="item">
 							<a href="page2-5.html"><img src="../IMG/myxao.jpg" title="Mỳ xào"></a>
-							<h2>MỲ XÀO</h2>
+							<h2>MỲ XÀO</br>Giá: 35.000đ</h2>
 						</li>
 						<li class="item">
 							<a href="page2-6.html"><img src="../IMG/phocuon.jpg" title="PHở cuốn"></a>
-							<h2>PHỞ CUỐN BÒ</h2>
+							<h2>PHỞ CUỐN BÒ</br>Giá: 50.000đ</h2>
 						</li>
 						<div class="clear"></div>
 					</ul>
@@ -129,15 +131,15 @@
 					<ul class="row">
 						<li class="item">
 							<a href="page5-1.html"><img src="../IMG/com-dua-bo.jpg" title="Cơm rang dưa bò"></a>
-							<h2>CƠM RANG DƯA BÒ</h2>
+							<h2>CƠM RANG DƯA BÒ</br>Giá: 35.000đ</h2>
 						</li>
 						<li class="item">
 							<a href="page5-2.html"><img src="../IMG/thap-cam.jpg" title="Cơm rang thập cẩm"></a>
-							<h2>CƠM RANG THẬP CẨM</h2>
+							<h2>CƠM RANG THẬP CẨM</br>Giá: 30.000đ</h2>
 						</li>
 						<li class="item">
 							<a href="page5-3.html"><img src="../IMG/comsuon.jpg" title="Cơm sườn"></a>
-							<h2>CƠM SƯỜN</h2>
+							<h2>CƠM SƯỜN</br>Giá: 50.000đ</h2>
 						</li>
 						<div class="clear"></div>
 					</ul>
@@ -151,15 +153,15 @@
 					<ul class="row">
 						<li class="item">
 							<a href="page3-1.html"><img src="../IMG/bun-bo-hue.jpg" title="Bún bò"></a>
-							<h2>BÚN BÒ</h2>
+							<h2>BÚN BÒ</br>Giá: 40.000đ</h2>
 						</li>
 						<li class="item">
 							<a href="page3-2.html"><img src="../IMG/bunchangio.jpg" title="Bún chân giò"></a>
-							<h2>BÚN CHÂN GIÒ</h2>
+							<h2>BÚN CHÂN GIÒ</br>Giá: 30.000đ</h2>
 						</li>
 						<li class="item">
 							<a href="page3-3.html"><img src="../IMG/Bun-thang.jpg" title="Bún thang"></a>
-							<h2>BÚN THANG</h2>
+							<h2>BÚN THANG</br>Giá: 40.000đ</h2>
 						</li>
 						<div class="clear"></div>
 					</ul>
@@ -173,30 +175,30 @@
 					<ul class="row">
 						<li class="item">
 							<a href="page4-1.html"><img src="../IMG/ruou1.jpg" title="Rượu táo mèo"></a>
-							<h2>RƯỢU TÁO MÈO</h2>
+							<h2>RƯỢU TÁO MÈO</br>Giá: 5.000đ/ly</h2>
 						</li>
 						<li class="item">
 							<a href="page4-2.html"><img src="../IMG/ruou2.jpg" title="Rượu ba kích"></a>
-							<h2>RƯỢU BA KÍCH</h2>
+							<h2>RƯỢU BA KÍCH</br>Giá: 5.000đ/ly</h2>
 						</li>
 						<li class="item">
 							<a href="page4-3.html"><img src="../IMG/ruou4.jpg" title="Rượu dừa"></a>
-							<h2>RƯỢU DỪA</h2>
+							<h2>RƯỢU DỪA</br>Giá: 5.000đ/ly</h2>
 						</li>
 						<div class="clear"></div>
 					</ul>
 					<ul class="row">
 						<li class="item">
 							<a href=""><img src="../IMG/cafe.png" title="Cà phê"></a>
-							<h2>CAFE</h2>
+							<h2>CAFE</br>Giá: 30.000đ</h2>
 						</li>
 						<li class="item">
 							<a href=""><img src="../IMG/trasua.jpg" title="Trà sữa"></a>
-							<h2>TRÀ SỮA</h2>
+							<h2>TRÀ SỮA</br>Giá: 15.000đ</h2>
 						</li>
 						<li class="item">
 							<a href=""><img src="../IMG/sinhto.jpg" title="Sinh tố"></a>
-							<h2>SINH TỐ HOA QUẢ</h2>
+							<h2>SINH TỐ HOA QUẢ</br>Giá: 30.000đ</h2>
 						</li>
 						<div class="clear"></div>
 					</ul>
@@ -205,6 +207,12 @@
 					<div class="tieude fifth">
 						<h1>KHUYẾN &nbsp; &nbsp; &nbsp; &nbsp; MÃI</h1>
 						<img src="../IMG/icon2.png">
+					</div>
+					<div id="sale">
+						<img src="../IMG/km5.jpg">
+						<img src="../IMG/km2.jpg">
+						<img src="../IMG/km3.jpg">
+						<img src="../IMG/km4.jpg">
 					</div>
 				</div>
 			</div>
@@ -215,6 +223,9 @@
 			<p class="ft2">Email: ipho1980@gmail.com</br>
 			Đặt hàng: 0868.97.91.93</p>
 			<div class="clear"></div>
+			<div class="back-home">
+				<a href="ipho.html"><img src="../IMG/trangchu.png" title="Quay về Trang chủ"></a>
+			</div>
 		</div>
 	</div>
 </body>
