--- a/Project6/HMTL/page2.html
+++ b/Project6/HMTL/page2.html
@@ -3,7 +3,7 @@
 <head>
 	<title>iPho</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../CSS/ipho.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/child-page.css">
 </head>
 <body>
 	<div id="wrapper">
@@ -18,39 +18,39 @@
 		<div id="main-menu">
 				<ul>
 					<li id="df"><a href="#"><i>ĐẾN VỚI iPhở</i></a></li>
-					<li><a href="#">GIỚI THIỆU</a></li>
+					<li><a href="page1.html">GIỚI THIỆU</a></li>
 					<li><a href="page2.html">PHỞ BÒ</a>
 						<ul class="sub-menu">
-							<li><a href="#">TÁI CHÍN</a></li>
-							<li><a href="#">TÁI GẦU</a></li>
-							<li><a href="#">TÁI NẠM</a></li>
-							<li><a href="#">PHỞ XÀO</a></li>
-							<li><a href="#">MỲ XÀO</a></li>
-							<li class="last"><a href="#">PHỞ CUỐN BÒ</a></li>
+							<li><a href="page2-1.html">TÁI CHÍN</a></li>
+							<li><a href="page2-2.html">TÁI GẦU</a></li>
+							<li><a href="page2-3.html">TÁI NẠM</a></li>
+							<li><a href="page2-4.html">PHỞ XÀO</a></li>
+							<li><a href="page2-5.html">MỲ XÀO</a></li>
+							<li class="last"><a href="page2-6.html">PHỞ CUỐN BÒ</a></li>
 						</ul>
 					</li>
 					<li><a href="page5.html">CƠM RANG</a>
 						<ul class="sub-menu">
-							<li><a href="#">DƯA BÒ</a></li>
-							<li><a href="#">THẬP CẨM</a></li>
-							<li class="last"><a href="#">CƠM SƯỜN</a></li>
+							<li><a href="page5-1.html">DƯA BÒ</a></li>
+							<li><a href="page5-2.html">THẬP CẨM</a></li>
+							<li class="last"><a href="page5-3.html">CƠM SƯỜN</a></li>
 						</ul>
 					</li>
 					<li><a href="page3.html">BÚN BÒ</a>
 						<ul class="sub-menu">
-							<li><a href="#">BÚN BÒ</a></li>
-							<li><a href="#">BÚN CHÂN GIÒ</a></li>
-							<li class="last"><a href="#">BÚN THANG</a></li>
+							<li><a href="page3-1.html">BÚN BÒ</a></li>
+							<li><a href="page3-2.html">BÚN CHÂN GIÒ</a></li>
+							<li class="last"><a href="page3-3.html">BÚN THANG</a></li>
 						</ul>
 					</li>
 					<li><a href="page4.html">ĐỒ UỐNG</a>
 						<ul class="sub-menu">
-							<li><a href="#">RƯỢU TÁO MÈO</a></li>
-							<li><a href="#">RƯỢU BA KÍCH</a></li>
-							<li><a href="#">RƯỢU DỪA</a></li>
-							<li><a href="#">CAFE</a></li>
-							<li><a href="#">TRÀ SỮA</a></li>
-							<li class="last"><a href="#">SINH TỐ</a></li>
+							<li><a href="page4-1.html">RƯỢU TÁO MÈO</a></li>
+							<li><a href="page4-2.html">RƯỢU BA KÍCH</a></li>
+							<li><a href="page4-3.html">RƯỢU DỪA</a></li>
+							<li><a href="page4-4.html">CAFE</a></li>
+							<li><a href="page4-5.html">TRÀ SỮA</a></li>
+							<li class="last"><a href="page4-6.html">SINH TỐ</a></li>
 						</ul>
 					</li>
 					<li><a href="km.html">KHUYẾN MÃI</a></li>
@@ -93,30 +93,30 @@
 					<ul class="row">
 						<li class="item">
 							<a href=""><img src="../IMG/Pho-Viet.jpg" title="Tái chín"></a>
-							<h2>TÁI CHÍN</h2>
+							<h2>TÁI CHÍN</br>Giá: 40.000đ</h2>
 						</li>
 						<li class="item">
 							<a href=""><img src="../IMG/pho-viet2.png" title="Tái gầu"></a>
-							<h2>TÁI GẦU</h2>
+							<h2>TÁI GẦU</br>Giá: 40.000đ</h2>
 						</li>
 						<li class="item">
 							<a href=""><img src="../IMG/Pho-Viet4.jpg" title="Tái nạm"></a>
-							<h2>TÁI NẠM</h2>
+							<h2>TÁI NẠM</br>Giá: 40.000đ</h2>
 						</li>
 						<div class="clear"></div>
 					</ul>
 					<ul class="row">
 						<li class="item">
 							<a href=""><img src="../IMG/phoxao.jpg" title="Phở xào"></a>
-							<h2>PHỞ XÀO</h2>
+							<h2>PHỞ XÀO</br>Giá: 35.000đ</h2>
 						</li>
 						<li class="item">
 							<a href=""><img src="../IMG/myxao.jpg" title="Mỳ xào"></a>
-							<h2>MỲ XÀO</h2>
+							<h2>MỲ XÀO</br>Giá: 35.000đ</h2>
 						</li>
 						<li class="item">
 							<a href=""><img src="../IMG/phocuon.jpg" title="PHở cuốn"></a>
-							<h2>PHỞ CUỐN BÒ</h2>
+							<h2>PHỞ CUỐN BÒ</br>Giá: 50.000đ</h2>
 						</li>
 						<div class="clear"></div>
 					</ul>
@@ -130,6 +130,9 @@
 			<p class="ft2">Email: ipho1980@gmail.com</br>
 			Đặt hàng: 0868.97.91.93</p>
 			<div class="clear"></div>
+			<div class="back-home">
+				<a href="ipho.html"><img src="../IMG/trangchu.png" title="Quay về Trang chủ"></a>
+			</div>
 		</div>
 	</div>
 </body>
