--- a/Project6/HMTL/page4-4.html
+++ b/Project6/HMTL/page4-4.html
@@ -18,39 +18,39 @@
 		<div id="main-menu">
 				<ul>
 					<li id="df"><a href="#"><i>ĐẾN VỚI iPhở</i></a></li>
-					<li><a href="#">GIỚI THIỆU</a></li>
+					<li><a href="page1.html">GIỚI THIỆU</a></li>
 					<li><a href="page2.html">PHỞ BÒ</a>
 						<ul class="sub-menu">
-							<li><a href="#">TÁI CHÍN</a></li>
-							<li><a href="#">TÁI GẦU</a></li>
-							<li><a href="#">TÁI NẠM</a></li>
-							<li><a href="#">PHỞ XÀO</a></li>
-							<li><a href="#">MỲ XÀO</a></li>
-							<li class="last"><a href="#">PHỞ CUỐN BÒ</a></li>
+							<li><a href="page2-1.html">TÁI CHÍN</a></li>
+							<li><a href="page2-2.html">TÁI GẦU</a></li>
+							<li><a href="page2-3.html">TÁI NẠM</a></li>
+							<li><a href="page2-4.html">PHỞ XÀO</a></li>
+							<li><a href="page2-5.html">MỲ XÀO</a></li>
+							<li class="last"><a href="page2-6.html">PHỞ CUỐN BÒ</a></li>
 						</ul>
 					</li>
 					<li><a href="page5.html">CƠM RANG</a>
 						<ul class="sub-menu">
-							<li><a href="#">DƯA BÒ</a></li>
-							<li><a href="#">THẬP CẨM</a></li>
-							<li class="last"><a href="#">CƠM SƯỜN</a></li>
+							<li><a href="page5-1.html">DƯA BÒ</a></li>
+							<li><a href="page5-2.html">THẬP CẨM</a></li>
+							<li class="last"><a href="page5-3.html">CƠM SƯỜN</a></li>
 						</ul>
 					</li>
 					<li><a href="page3.html">BÚN BÒ</a>
 						<ul class="sub-menu">
-							<li><a href="#">BÚN BÒ</a></li>
-							<li><a href="#">BÚN CHÂN GIÒ</a></li>
-							<li class="last"><a href="#">BÚN THANG</a></li>
+							<li><a href="page3-1.html">BÚN BÒ</a></li>
+							<li><a href="page3-2.html">BÚN CHÂN GIÒ</a></li>
+							<li class="last"><a href="page3-3.html">BÚN THANG</a></li>
 						</ul>
 					</li>
 					<li><a href="page4.html">ĐỒ UỐNG</a>
 						<ul class="sub-menu">
-							<li><a href="#">RƯỢU TÁO MÈO</a></li>
-							<li><a href="#">RƯỢU BA KÍCH</a></li>
-							<li><a href="#">RƯỢU DỪA</a></li>
-							<li><a href="#">CAFE</a></li>
-							<li><a href="#">TRÀ SỮA</a></li>
-							<li class="last"><a href="#">SINH TỐ</a></li>
+							<li><a href="page4-1.html">RƯỢU TÁO MÈO</a></li>
+							<li><a href="page4-2.html">RƯỢU BA KÍCH</a></li>
+							<li><a href="page4-3.html">RƯỢU DỪA</a></li>
+							<li><a href="page4-4.html">CAFE</a></li>
+							<li><a href="page4-5.html">TRÀ SỮA</a></li>
+							<li class="last"><a href="page4-6.html">SINH TỐ</a></li>
 						</ul>
 					</li>
 					<li><a href="km.html">KHUYẾN MÃI</a></li>
@@ -94,11 +94,7 @@
 						<h2>CAFE</h2>
 						<div class="section-left">
 							<p> 
-							Tô phở hoàn hảo cho những thực khách đang rất đói!</br>
-							Phở Tái gầu của iPhở cũng sử dụng nước dùng như Phở Tái chín, được nấu thủ công từ 100% xương ống bò nguyên chất, với quá trình hầm xương trải qua nhiều giờ cùng 24 thành phần đặc biệt và sự tận tâm của người đầu bếp.</br>
-							Bánh Phở được chế biến thủ công bởi những nghệ nhân lành nghề và không sử dụng bất kì chất bảo quản nào. Bánh phở mới ra lò luôn được giao tới các cửa hàng mỗi ngày vào sáng sớm. Các loại rau thơm, giá vừa tươi vừa sạch cùng các loại tương ngon nhất được phục vụ để tăng thêm sự sinh động và sức sống cho tô phở Đặc biệt.</br>
-							Còn chờ gì nữa nào, thưởng thức thôi!
-							</p>
+							Bằng cả tình yêu và sự đam mê cà phê mãnh liệt nhất, từ những hạt cà phê nguyên gốc và tốt nhất thế giới đã được chắt chiu, trên công nghệ hàng đầu, Trung Nguyên đã gửi đến những người yêu và sành cà phê không chỉ là một ly cà phê thơm ngon, quyến rũ bậc nhất mà còn là một năng lượng đặc biệt.</br> </br>Nguồn năng lượng đó dành cho sự khởi động của trí não, cho cảm hứng của những ý tưởng sáng tạo và cho những thành công.
 						</div>
 						<div class="section-right">
 							<img src="../IMG/cafe.jpg">
@@ -117,6 +113,9 @@
 			<p class="ft2">Email: ipho1980@gmail.com</br>
 			Đặt hàng: 0868.97.91.93</p>
 			<div class="clear"></div>
+			<div class="back-home">
+				<a href="ipho.html"><img src="../IMG/trangchu.png" title="Quay về Trang chủ"></a>
+			</div>
 		</div>
 	</div>
 </body>
