--- a/Project6/HMTL/page4-2.html
+++ b/Project6/HMTL/page4-2.html
@@ -72,7 +72,7 @@
 
 			<div id="content-right">
 				<div id="ad">
-					<img id="bg" src="../IMG/ad5.jpg">
+					<img id="bg" src="../IMG/bg5.jpg">
 					<h2 id="slogan">			
 						<span class="word">THƯƠNG</span>
 						<span class="word">HIỆU</span>
