--- a/JavaScript/js.html
+++ b/JavaScript/js.html
@@ -15,26 +15,39 @@
 
 	<div id="bt2">
 		<h3>Bài 2: Tính bình phương của một hàm 3 tham số.</h3>
-		Input a: <input type="text" id="para_a" size="7px"></br></br>
-		Input b: <input type="text" id="para_b" size="7px"></br></br>
-		Input c: <input type="text" id="para_c" size="7px"></br></br>
 		<button onclick="result_ex2()">Tính: f = (3*a+2*b-c)<sup>2</sup></button>
 	</div>
 
 	<div id="bt3">
-		<h3>Bài 3: Xử lý dữ liệu String1.</h3>
+		<h3>Bài 3: Xử lý dữ liệu String1 (<i>Lấy 10 ký tự đầu và thêm '...' vào cuối</i>).</h3>
 		Input a string: <input type="text" id="string1" size="100px"></br></br>
 		<input type="button" value="Result" onclick="get_result1(result())">
-		<input type="text" id="string_cut" size="100px" disabled="disabled">
+		<input type="text" id="string_cut" size="105px" disabled="disabled">
 	</div>
 
 	<div id="bt4">
-		<h3>Bài 4: Xử lý dữ liệu String2.</h3>
+		<h3>Bài 4: Xử lý dữ liệu String2 (<i>Một chuỗi bất kỳ viết hoa ký tự đầu tiên</i>).</h3>
 		Input a string: <input type="text" id="string2" size="100px"></br></br>
 		<input type="button" value="Result" onclick="get_result2(result2())">
-		<input type="text" id="string_upcase" size="100px" disabled="disable">
+		<input type="text" id="string_upcase" size="105px" disabled="disable">
 	</div> 
 
+	<div id="bt5">
+		<h3>Bài 5: Xử lý dữ liệu mảng1 (<i>Lấy ra số nhỏ nhất</i>).</h3>
+		Input Array Number(ex:1,3,4,...): <input type="text" id="array1" size="50px"></br></br>
+		<input type="button" value="Min-Number:" onclick="get_result3(result3())">
+		<input type="text" id="min-number" size="10px" disabled="disable">
+	</div>
 
+	<div id="bt6">
+		<h3>Bài 6: Xử lý dữ liệu mảng2 (<i>Sắp xếp danh sách</i>).</h3>
+		<input type="button" value="Result:" onclick="get_result4(result4())">
+		<input type="text" id="list" size="50px" disabled="disable">
+	</div>
+
+	<div id="bt7">
+		<h3>Bài 7: Xử lý dữ liệu object.</h3>
+		
+	</div>
 </body>
 </html>
