--- a/JavaScript/function.html
+++ b/JavaScript/function.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Thực hành JavaScript</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="js.css">
-	<script src="javascript.js"></script>
+	<link rel="stylesheet" type="text/css" href="function.css">
+	<script src="function.js"></script>
 </head>
 <body>
 	<h2>BÀI THỰC HÀNH VỀ JAVASCRIPT</h3>
