--- a/JavaScript/draw_shape.html
+++ b/JavaScript/draw_shape.html
@@ -9,11 +9,23 @@
 <body>
 	<div id="Bài 1">
 		<h3>Bài 1: Vẽ tam giác vuông cân</h3>
-		<input type="button" value="Input" onclick="get_result1()">
+		<input type="button" value="Nhập cạnh" onclick="get_result1()">
 	</div>
 	<div id="Bài 2">
 		<h3>Bài 2: Vẽ hình chữ nhật rỗng</h3>
-		<input type="button" value="Result" onclick="get_result2()">
+		<input type="button" value="Nhập cạnh" onclick="get_result2()">
+	</div>
+	<div id="Bài 3">
+		<h3>Bài 3: Vẽ hình tam giác cân ngược</h3>
+		<input type="button" value="Nhập vào n" onclick="get_result3()">
+	</div>
+	<div id="Bài 4">
+		<h3>Bài 4: Vẽ hình chữ X chiều cao bằng n</h3>
+		<input type="button" value="Nhập vào n" onclick="get_result4()">
+	</div>
+	<div id="Bài 5">
+		<h3>Bài 5: Vẽ hình con bướm chiều cao bằng n</h3>
+		<input type="button" value="Nhập vào n" onclick="get_result5()">
 	</div>
 
 
