--- a/Project8/quiz.html
+++ b/Project8/quiz.html
@@ -10,10 +10,10 @@
 		<img src="logo.png" id="logo">
 		<input type="text" class="question" readonly id="ques_index"></br>
 		<div class="answer">
-			<input type="button" class="item"  id="ans_A" onclick="">
-			<input type="button" class="item" id="ans_B" onclick=""></br>
-			<input type="button" class="item" id="ans_C" onclick="">
-			<input type="button" class="item" id="ans_D" onclick=""></br>
+			<input type="button" class="item"  id="ans_1" onclick="choise_color(this)">
+			<input type="button" class="item" id="ans_2" onclick="choise_color(this)"></br>
+			<input type="button" class="item" id="ans_3" onclick="choise_color(this)">
+			<input type="button" class="item" id="ans_4" onclick="choise_color(this)"></br>
 			<div class="text" id="a">A .</div>
 			<div class="text" id="b">B .</div>
 			<div class="text" id="c">C .</div>
