--- a/Project8/rule.html
+++ b/Project8/rule.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="content1">
-		<p id="rules">Có tổng cộng 5 câu hỏi với nhiều chủ đề, người chơi phải trả lời hết 5 câu hỏi trên. Trả lời đúng mỗi câu tương ứng với 20 triệu đồng. Trả lời đúng cả 5 câu người chơi nhận ngay 100 triệu đồng.</br> Trả lời sai một câu bất kỳ phần thưởng về 0 đồng.</br></br><i>Chúc bạn may mắn!...</i></p>
+		<p id="rules">Có tổng cộng 5 câu hỏi về chủ đề lịch sử, người chơi phải trả lời hết 5 câu hỏi trên. Trả lời đúng mỗi câu tương ứng với 20 triệu đồng. Trả lời đúng cả 5 câu người chơi nhận ngay 100 triệu đồng.</br> Trả lời sai một câu bất kỳ phần thưởng về 0 đồng.</br></br><i>Chúc bạn may mắn!...</i></p>
 		<input  id="back_home1" type="button" value="Back to Home" onclick="trans_homepage()">
 	</div>
 	
