--- a/Project8/again.html
+++ b/Project8/again.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div id="content3" >
+		<div><p id="result"></p></div>
 		<input  id="back_home3" type="button" value="Back to Home" onclick="trans_homepage()">
 		<input  id="trans_page3" type="button" value="Play Again" onclick="trans_quizpage()">
 		<audio autoplay loop>
