--- a/Project8/home.html
+++ b/Project8/home.html
@@ -8,11 +8,12 @@
 <body>
 	<div id="content1">
 		<input class="select" type="button" value="Luật Chơi" onclick="trans_rulepage()">
-		<input class="select" id="trans_page" type="button" value="Chơi Ngay" onclick="trans_quizpage()">
+		<input class="select" id="trans_page" type="button" value="Sẵn Sàng" onclick="trans_quizpage()">
 	</div>
 	<audio autoplay>
-       <source src="" type="audio/mp3" />
+       <source src="nhacnen.mp3" type="audio/mp3" />
     </audio>
+ 	
 <script src="quiz.js"></script>
 </body>
 </html>
