--- a/Project7_2/calculatorJQUERY.html
+++ b/Project7_2/calculatorJQUERY.html
@@ -53,7 +53,7 @@
 
 		</div>
 	</div>
-	<script src="jquery-3.2.0.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
 	<script src="calculatorJQUERY.js"></script>
 </body>
 </html>
