--- a/Project9_memorycard/HTML/memorycard.html
+++ b/Project9_memorycard/HTML/memorycard.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Memory Card</title>
+	<title>Dragon Ball Card</title>
+	<link rel="shortcut icon" href="../IMG/icon.ico" type="image/x-icon">
+	<meta name="author" content="congtrinh0209">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../CSS/memorycard.css">
 </head>
@@ -9,7 +11,21 @@
 	<div id="wrapper">
 		
 	</div>
-
+<audio id="time-end">
+    <source src="../Music/time-end.mp3" type="audio/mpeg">
+</audio>
+<audio id="lose-music">
+    <source src="../Music/lose.mp3" type="audio/mpeg">
+</audio>
+<audio id="start-music">
+    <source src="../Music/start.mp3" type="audio/mpeg">
+</audio>
+<audio id="click-music">
+    <source src="../Music/choise.mp3" type="audio/mpeg">
+</audio>
+<audio id="true">
+    <source src="../Music/ding.mp3" type="audio/mpeg">
+</audio>
 <script src="../JS/jquery-3.2.0.min.js"></script>
 <script src="../JS/memorycard.js"></script>
 </body>
