--- a/Project9_memorycard/HTML/home.html
+++ b/Project9_memorycard/HTML/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dragon Ball Card</title>
+	<title>Dragon Ball HeRoes</title>
 	<link rel="shortcut icon" href="../IMG/icon.ico" type="image/x-icon">
 	<meta name="author" content="congtrinh0209">
 	<meta charset="utf-8">
