--- a/Project9_memorycard/HTML/memorycard.html
+++ b/Project9_memorycard/HTML/memorycard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dragon Ball Card</title>
+	<title>Dragon Ball Heroes</title>
 	<link rel="shortcut icon" href="../IMG/icon.ico" type="image/x-icon">
 	<meta name="author" content="congtrinh0209">
 	<meta charset="utf-8">
@@ -11,6 +11,7 @@
 	<div id="wrapper">
 		
 	</div>
+	<div class="start"><img src="../IMG/start.png"></div>
 <audio id="time-end">
     <source src="../Music/time-end.mp3" type="audio/mpeg">
 </audio>
