--- a/Project9_memorycard/HTML/memorycard.html
+++ b/Project9_memorycard/HTML/memorycard.html
@@ -11,21 +11,42 @@
 	<div id="wrapper">
 		
 	</div>
+	<div class="victory_page">
+		<img src="../IMG/victory2.png" class="victory">
+		<img src="../IMG/home.png" class="home">
+	</div>
+	<div class="lose_page">
+		<img src="../IMG/lose.png" class="lose">
+		<img src="../IMG/again.png" class="again">
+	</div>
+	<div class="time">
+		<div class="oclock"><img src="../IMG/dh.png"></div>
+		<div class="time_number"><h3></h3></div>
+	</div>
 	<div class="start"><img src="../IMG/start.png"></div>
 <audio id="time-end">
     <source src="../Music/time-end.mp3" type="audio/mpeg">
+</audio>
+<audio id="victory-music">
+    <source src="../Music/victory.M4A" type="audio/mpeg">
 </audio>
 <audio id="lose-music">
     <source src="../Music/lose.mp3" type="audio/mpeg">
 </audio>
 <audio id="start-music">
-    <source src="../Music/start.mp3" type="audio/mpeg">
+    <source src="../Music/start.M4A" type="audio/mpeg">
 </audio>
 <audio id="click-music">
     <source src="../Music/choise.mp3" type="audio/mpeg">
 </audio>
+<audio id="ost" loop>
+    <source src="../Music/wind-sound.mp3" type="audio/mpeg">
+</audio>
 <audio id="true">
     <source src="../Music/ding.mp3" type="audio/mpeg">
+</audio>
+<audio id="open-music" autoplay loop>
+    <source src="../Music/ost.mp3" type="audio/mpeg" >
 </audio>
 <script src="../JS/jquery-3.2.0.min.js"></script>
 <script src="../JS/memorycard.js"></script>
