--- a/Project6/HMTL/km.html
+++ b/Project6/HMTL/km.html
@@ -4,6 +4,7 @@
 	<title>iPho</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../CSS/child-page.css">
+	<link rel="stylesheet" type="text/css" href="../css2/font-awesome.min.css">
 </head>
 <body>
 	<div id="wrapper">
@@ -103,9 +104,9 @@
 			<div class="clear"></div>
 		</div>
 		<div id="footer">
-			<p class="ft1">&#169;2017 iPhở-Thương hiệu độc quyền.</p>
-			<p class="ft2">Email: ipho1980@gmail.com</br>
-			Đặt hàng: 0868.97.91.93</p>
+				<p class="ft1">&#169;2017 iPhở-Thương hiệu độc quyền.</p>
+			<p class="ft2"><i class="fa fa-google"></i> : ipho1980@gmail.com</br>
+			<i class="fa fa-volume-control-phone"></i> : 0868.97.91.93</p>
 			<div class="clear"></div>
 			<div class="back-home">
 				<a href="ipho.html"><img src="../IMG/trangchu.png" title="Quay về Trang chủ"></a>
