--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -13,7 +13,13 @@
 	<div class="container">
 		<div class="header">
 			<div class="logo"></div>
-			<div class="banner"></div>
+			<div class="banner">
+				<div class="face"><i class="fa fa-facebook-square"></i></div>
+				<a class="face2">
+					<i class="fa fa-facebook"></i>
+					<span class="text-f">Facebook</span>
+				</a>
+			</div>
 			<div class="main-menu">
 				<div class="menu-mobile">
 					<ul>
