--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -55,21 +55,21 @@
 				</div>
 				<div class="menu-1024">
 					<ul>
-						<li class="item"><a href="#">Trang chủ</a></li>
-						<li class="item"><a href="#">Cho thuê</a>
+						<li class="item"><a href="#"><i class="fa fa-home"></i>Trang chủ</a></li>
+						<li class="item"><a href="#"><i class="fa fa-user-secret"></i>Cho thuê</a>
 							<ul class="sub-menu">
-								<li class="sub-item"><a href="">Phòng cho thuê</a></li>
-								<li class="sub-item" id="sub2"><a href="">Nhà cho thuê</a></li>
-								<li class="sub-item"><a href="">Chung cư mini</a></li>
-								<li class="sub-item"><a href="">Mặt bằng cho thuê</a></li>
+								<li class="sub-item"><a href=""><i class="fa fa-bolt"></i>Phòng cho thuê</a></li>
+								<li class="sub-item" id="sub2"><a href=""><i class="fa fa-bolt"></i>Nhà cho thuê</a></li>
+								<li class="sub-item"><a href=""><i class="fa fa-bolt"></i>Chung cư mini</a></li>
+								<li class="sub-item"><a href=""><i class="fa fa-bolt"></i>Mặt bằng cho thuê</a></li>
 							</ul>
 						</li>
-						<li class="item"><a href="#">Giúp tôi</a></li>
-						<li class="item"><a href="#">Ở ghép</a></li>
-						<li class="item"><a href="#">Tin tức</a></li>
-						<li class="item"><a href="#">Hướng dẫn</a></li>
-						<li class="item"><a href="#">Nạp tiền</a></li>
-						<li class="item"><a href="#">Đăng tin</a></li>
+						<li class="item"><a href="#"><i class="fa fa-binoculars"></i>Giúp tôi</a></li>
+						<li class="item"><a href="#"><i class="fa fa-users"></i>Ở ghép</a></li>
+						<li class="item"><a href="#"><i class="fa fa-newspaper-o"></i>Tin tức</a></li>
+						<li class="item"><a href="#"><i class="fa fa-life-ring"></i>Hướng dẫn</a></li>
+						<li class="item"><a href="#"><i class="fa fa-money"></i>Nạp tiền</a></li>
+						<li class="item"><a href="#"><i class="fa fa-upload"></i>Đăng tin</a></li>
 						<div class="sign">
 							<button type="button" class="sign-item"><i class="fa fa-sign-in"></i><span>Đăng nhập</span></button>
 							<button type="button" class="sign-item"><i class="fa fa-pencil"></i><span>Đăng ký</span></button>
@@ -78,6 +78,84 @@
 					</ul>
 				</div>
 			</div>
+			
+		</div>
+		<div class="content">
+			<div id="content-left">
+				<div class="image">
+					<img src="../IMG/1.jpg">
+					<div class="icon-p">
+						<i class="fa fa-picture-o"></i>
+					</div>
+				</div>
+			</div>
+			<div id="content-right">
+				<div class="content-right1">
+					<div class="item-cr1 title"><a href=""><p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ PHÒNG TRỌ TẠI SỐ 131A, NGÕ 105/20 ĐƯỜNG DOÃN KẾ THIỆN, MAI DỊCH, QUẬN CẦU GIẤY</p></a></div>
+					<div class="description">
+						<p>THÔNG TIN MÔ TẢ</p>
+						<div class="item-cr1 summarize-desc"><p>Nhà tôi chính chủ còn 1 phòng trống cần cho thuê gấp vào ở được ngay, tại địa chỉ số 131A ngõ 105/20 đường Doãn Kế Thiện, Mai Dịch, cách nhà nghỉ Thanh Trà 2: 10m.</p></div>
+					</div>
+					<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
+					<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
+					<div class="item-cr1 date"><p>Ngày: 20/08/2016</p></div>
+				</div>
+				<div class="content-right2">
+					<div class="price-service">
+						<p>Giá dịch vụ:</p>
+						<div class="item-cr1 water-price"><i class="fa fa-shower"></i> Giá nước: <span>25.000/m3</span></div>
+						<div class="item-cr1 electric-price"><i class="fa fa-bolt"></i> Giá điện: <span>3.500/số</span></div>
+						<div class="item-cr1 internet-price"><i class="fa fa-wifi"></i> Mạng: <span>50.000/tháng</span></div>
+						<div class="item-cr1 park-price"><i class="fa fa-motorcycle"></i> Gửi xe: <span>Free</span></div>
+					</div>
+					<div class="item-cr1 phone"><i class="fa fa-phone"></i><span> LH: 0988870225</span></div>
+					<div class="item-cr1 price"><i class="fa fa-money"></i><span> Phòng: 1.5tr/tháng</span></div>
+					<button type="text" class="button-detail"><i class="fa fa-arrow-right"></i> Xem chi tiết</button>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div class="clear"></div>
+		</div>
+
+		<div class="content">
+			<div id="content-left">
+				<div class="image">
+					<img src="../IMG/2.jpg">
+					<div class="icon-p">
+						<i class="fa fa-picture-o"></i>
+					</div>
+				</div>
+			</div>
+			<div id="content-right">
+				<div class="content-right1">
+					<div class="item-cr1 title"><a href=""><p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ PHÒNG TRỌ TẠI SỐ 131A, NGÕ 105/20 ĐƯỜNG DOÃN KẾ THIỆN, MAI DỊCH, QUẬN CẦU GIẤY</p></a></div>
+					<div class="description">
+						<p>THÔNG TIN MÔ TẢ</p>
+						<div class="item-cr1 summarize-desc"><p>Nhà tôi chính chủ còn 1 phòng trống cần cho thuê gấp vào ở được ngay, tại địa chỉ số 131A ngõ 105/20 đường Doãn Kế Thiện, Mai Dịch, cách nhà nghỉ Thanh Trà 2: 10m.</p></div>
+					</div>
+					<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
+					<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
+					<div class="item-cr1 date"><p>Ngày: 20/08/2016</p></div>
+				</div>
+				<div class="content-right2">
+					<div class="price-service">
+						<p>Giá dịch vụ:</p>
+						<div class="item-cr1 water-price"><i class="fa fa-shower"></i> Giá nước: <span>25.000/m3</span></div>
+						<div class="item-cr1 electric-price"><i class="fa fa-bolt"></i> Giá điện: <span>3.500/số</span></div>
+						<div class="item-cr1 internet-price"><i class="fa fa-wifi"></i> Mạng: <span>50.000/tháng</span></div>
+						<div class="item-cr1 park-price"><i class="fa fa-motorcycle"></i> Gửi xe: <span>Free</span></div>
+					</div>
+					<div class="item-cr1 phone"><i class="fa fa-phone"></i><span> LH: 0988870225</span></div>
+					<div class="item-cr1 price"><i class="fa fa-money"></i><span> Phòng: 1.5 tr/tháng</span></div>
+					<button type="text" class="button-detail"><i class="fa fa-arrow-right"></i> Xem chi tiết</button>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div class="clear"></div>
+		</div>
+
+
+		<div class="footer">
 			<div class="search">
 				<div class="row">
 					<select class="select">
@@ -134,16 +212,6 @@
 				<div class="icon-s"><i class="fa fa-search"></i><span>Tìm Kiếm</span></div>
 			</div>
 		</div>
-		<div class="content">
-			<div id="content-left"></div>
-			<div id="content-right"></div>
-			<div class="clear"></div>
-		</div>
-		<div class="footer"></div>
-
-
-
-
 
 
 	</div>
