--- a/Project10-form/HTML/facebook.html
+++ b/Project10-form/HTML/facebook.html
@@ -2,14 +2,40 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Facebook</title>
+	<title>Chào mừng bạn đến với Facebook</title>
+	<meta charset="utf-8">
+	<meta name="author" content="congtrinh0209">
+	<link rel="stylesheet" type="text/css" href="../css2/font-awesome.min.css">
 	<link rel="shortcut icon" href="../icon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="../CSS/sign-up.css">
 </head>
 <body>
-	<h3>Tạo tài khoản thành công</h3>
-	<script type="text/javascript">
-		
-	</script>
+	<div class="banner"></div>
+	<div class="wrapper">	
+		<div class="logo">facebook</div>
+		<div class="sign-content">
+			<div class="content-left">
+				<div class="slogan">Facebook giúp bạn kết nối và chia sẻ với mọi</br> người trong cuộc sống của bạn.</div>
+				<div class="symbol">
+					<img src="../logo.png">
+				</div>
+			</div>
+			<div class="content-right">
+				<h1>Đăng ký thành công</h1>
+				<h2>Thông tin tài khoản của bạn</h2>
+				<div class="user">Họ tên:<input type="text" class="info user-name" readonly></div> 
+				<div class="user">Ngày sinh:<input type="text" class="info birth-day" readonly></div>
+				<div class="user">Giới tính:<input type="text" class="info gender" readonly></div>
+				<div class="user">Email:<input type="text" class="info your-email" readonly></div>
+				<div class="user">Mobile:<input type="text" class="info your-mobile" readonly></div>
+				<div class="user">Mật khẩu đăng nhập:</div>
+				<input type="text" class="pass" readonly> </br>
+				<button class="home">Vào trang đăng nhập</button>
+			</div>
+			<div class="clear"></div>
+		</div>
+	</div>
+	<script src="../JS/jquery-3.2.0.min.js"></script>
+	<script src="../JS/sign-up.js"></script>
 </body>
 </html>
