--- a/Project10-form/HTML/sign-up.html
+++ b/Project10-form/HTML/sign-up.html
@@ -23,16 +23,16 @@
 			<div class="content-right">
 				<h1>Đăng ký</h1>
 				<p>Luôn miễn phí</p>
-				<form action="facebook.html" id="sign-up" method="post">
+				<form action="facebook.html" id="sign-up">
 					<span class="error1"></span><input type="text" id="first-name" name="first-name" placeholder="Họ"/>
 					<input type="text" id="last-name" name="last-name" placeholder="Tên"/><span class="error2"></span></br>
 					<input type="text" id="mobile" name="mobile" placeholder="Số di động"/><span class="error3"></span></br>
 					<input type="text" id="email" name="email" placeholder="Email của bạn"/><span class="error6"></span></br>
 					<input type="password" id="pass-word" name="password" placeholder="Mật khẩu"/><span class="error4"></span></br>
 					<p>Ngày sinh</p>
-					<select class="date"></select>
-					<select class="month"></select>
-					<select class="year"></select>
+					<select type="text" class="date" name="date"></select>
+					<select type="text" class="month" name="month"></select>
+					<select type="text" class="year" name="year"></select>
 					<span class="error5"></span>
 					</br></br>
 					<input type="radio" name="gender" id="famale" value="Female" checked="checked"></input><label for="famale">Nữ</label>
