--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -7,8 +7,8 @@
 	<meta name="author" content="congtrinh0209">
 	<link rel="stylesheet" type="text/css" href="../CSS/home.css">
 	<link rel="stylesheet" type="text/css" href="../css2/font-awesome.min.css">
-	<!<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap.min.css">
-	<!<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap-theme.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -157,7 +157,7 @@
 		<div class="side-bar">
 			<div class="search">
 					<div class="title-side">
-						<h2>TÌM PHÒNG</h2>
+						TÌM PHÒNG
 					</div>
 					<div class="row">
 						<select class="select">
@@ -215,7 +215,7 @@
 			</div>
 			<div class="news">
 				<div class="title-side">
-					<h2>BÀI VIẾT</h2>
+					BÀI VIẾT
 				</div>
 				<div class="new-item">Chung cư mini mới xây gồm 200 phòng toàn bộ nội thất trong phòng được thiết kế bằng gỗ rất mát mẻ, sang trọng. Chính thức đưa tòa nhà vào hoạt…</div>
 				<div class="new-item">Chung cư mini mới xây gồm 200 phòng toàn bộ nội thất trong phòng được thiết kế bằng gỗ rất mát mẻ, sang trọng. Chính thức đưa tòa nhà vào hoạt…</div>
