--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -13,16 +13,36 @@
 </head>
 <body>
 	<div class="banner">
-		<div class="face"><i class="fa fa-facebook-square"></i></div>
-		<a class="face2">
-			<i class="fa fa-facebook"></i>
-			<span class="text-f">Facebook</span>
-		</a>
+		<ul class="list-banner">
+			<li class="list item1">
+				<div class="list-text"></div>
+			</li>
+			<li class="list item2">
+				<div class="list-text"></div>
+			</li>
+			<li class="list item3">
+				<div class="list-text"></div>
+			</li>
+			<li class="list item4">
+				<div class="list-text"></div>
+			</li>
+			<li class="list item5">
+				<div class="list-text"></div>
+			</li>
+			<div class="clear"></div>
+		</ul>
 	</div>
 	<div class="container">
+		<div class="logo"><img src="../IMG/logo1.png"></div>
 		<div class="header">
-			<div class="logo"></div>
 			
+			<div class="face"><i class="fa fa-facebook-square"></i></div>
+			<ul class="face2">
+				<li class="f-icon"><i class="fa fa-facebook"></i></li>
+				<li class="f-share left"><a href=""><img src="../IMG/f-share1.jpg"></a></li>
+				<li class="f-share right"><a href=""><img src="../IMG/f-share.png"></a></li>
+				<div class="clear"></div>
+			</ul>
 
 			<div class="main-menu">
 				<div class="menu-mobile">
