--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -112,8 +112,46 @@
 							<li class="item"><a href="#"><i class="fa fa-book"></i></br>Quản lý</a></li>
 							<li class="item"><a href="#"><i class="fa fa-money"></i></br>Nạp tiền</a></li>
 							<div class="sign">
-								<button type="button" class="sign-item"><i class="fa fa-sign-in"></i><span>Đăng nhập</span></button>
-								<button type="button" class="sign-item"><i class="fa fa-pencil"></i><span>Đăng ký</span></button>
+								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-sign-in"></i><span>Đăng nhập</span></button>
+								<! Form đăng nhập>
+							<!-- Modal -->
+							  <div class="modal fade" id="myModal" role="dialog">
+							    <div class="modal-dialog">
+							    
+							      <!-- Modal content-->
+							      <div class="modal-content">
+							        <div class="modal-header">
+							          <button type="button" class="close" data-dismiss="modal">&times;</button>
+							          <h4 class="modal-title">Đăng nhập hệ thống!</h4>
+							        </div>
+							        <div class="modal-body">
+							          <form action="action_page">
+							            <div class="container form">
+							              <label><b>Tên đăng nhập</b></label>
+							              <input type="text" placeholder="Email hoặc số điện thoại" name="uname" required>
+
+							              <label><b>Mật khẩu</b></label>
+							              <input type="password" placeholder="Mật khẩu đăng nhập" name="psw" required>
+
+							              <button class="login" type="submit">Login</button>
+							              <input type="checkbox" checked="checked"> Remember me
+							            </div>
+
+							            <div class="container form" style="background-color:#f1f1f1">
+							              <span class="psw"><a href="#">Forgot password?</a></span>
+							            </div>
+							          </form>
+							        </div>
+							        <div class="modal-footer">
+							          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+							        </div>
+							      </div>
+							      
+							    </div>
+							  </div>
+
+								<! Form đăng nhập>
+								<button type="button" class="btn btn-info btn-su"><i class="fa fa-pencil"></i><span>Đăng ký</span></button>
 							</div>
 							<div class="clear"></div>
 						</ul>
